force-app/main/default/objects/copado__User_Story_Data_Commit__c/copado__User_Story_Data_Commit__c.object-meta.xml
<CustomObject>
    <label>User Story Data Commit</label>
    <nameField>
        <displayFormat>USDC-{0000000}</displayFormat>
        <label>User Story Data Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Data Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>