force-app/main/default/objects/copado__User_Story_Data_Commit__c/fields/copado__Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__Commit_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Commit Date</label>
    <type>DateTime</type>
</CustomField>