force-app/main/default/objects/copado__User_Story_Data_Commit__c/fields/copado__Execution_Job__c.field-meta.xml
<CustomField>
    <fullName>copado__Execution_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Job</label>
    <referenceTo>copado__Deployment__c</referenceTo>
    <relationshipLabel>User Story Data Commits</relationshipLabel>
    <relationshipName>User_Story_Data_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>